--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<html>
-<body>
-<table>
-<script>
-for(var i=1:i<=9:i++){
-   document.write('<tr>'):
-   for(var j=1:j<+1;j++){
-   document.write('<td>'):
-   document.write(i+'x'+j+'='+i*j):
-   document.write('<td>'):
-   }
-   document.write('<tr>'):
-}
-</script>
-</table>
-</body>
-</html>
+<html>  
+<head>  
+</head>  
+<body>    
+<script>   
+document.write("<table>");  
+  
+for (var x = 1; x <= 9; x++)  
+{  
+    document.write("<tr>");  
+    for (var y = 1; y <= x; y++)  
+    {  
+        document.write("<th>"+y+"*"+x+"="+y*x+"</th>");  
+    }  
+    document.write("</tr>");  
+}  
+document.write("</table>");    
+</script>  
+</body>  
+</html>  
